[gd_scene load_steps=16 format=3 uid="uid://dfuomlqqqejtn"]

[ext_resource type="PackedScene" uid="uid://dn1vag67lj3ip" path="res://character/character.tscn" id="1_btruc"]
[ext_resource type="Script" path="res://character/player/player.gd" id="2_qtfxe"]
[ext_resource type="Script" path="res://character/player/component/player_input_component.gd" id="3_mcp1a"]
[ext_resource type="Script" path="res://character/player/component/player_camera_component.gd" id="4_b2hrc"]
[ext_resource type="Script" path="res://character/player/component/player_movement_finite_state_machine_component.gd" id="5_57h12"]
[ext_resource type="Script" path="res://character/player/component/player_concurrent_state_machine_component.gd" id="5_wubf3"]
[ext_resource type="Script" path="res://character/player/state/movement/ground/player_ground_idle_state.gd" id="6_lxha7"]
[ext_resource type="Script" path="res://character/player/state/movement/ground/player_ground_run_state.gd" id="7_imrox"]
[ext_resource type="Script" path="res://character/player/component/player_weapon_finite_state_machine_component.gd" id="8_bigsv"]
[ext_resource type="Script" path="res://character/player/state/movement/air/player_air_fall_state.gd" id="9_fkquo"]
[ext_resource type="Script" path="res://character/player/state/movement/air/player_air_jump_state.gd" id="10_2q8pc"]
[ext_resource type="Script" path="res://character/player/state/weapon/sword/player_sword_idle_state.gd" id="10_5jwnn"]
[ext_resource type="Script" path="res://character/character_movement_component.gd" id="11_n6n67"]
[ext_resource type="Script" path="res://character/player/state/movement/air/player_air_jump_down_state.gd" id="12_5y10m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pype3"]

[node name="Player" instance=ExtResource("1_btruc")]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_qtfxe")

[node name="MeleeAttackArea2D" type="Area2D" parent="." index="3"]

[node name="MeleeAttackCollisionShape2D" type="CollisionShape2D" parent="MeleeAttackArea2D" index="0"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_pype3")
disabled = true

[node name="PlayerCameraComponent" type="Node2D" parent="." index="4"]
script = ExtResource("4_b2hrc")

[node name="Camera2D" type="Camera2D" parent="PlayerCameraComponent" index="0"]

[node name="PlayerInputComponent" type="Node" parent="." index="5"]
script = ExtResource("3_mcp1a")

[node name="CharacterMovementComponent" type="Node" parent="." index="6"]
script = ExtResource("11_n6n67")

[node name="PlayerConcurrentStateMachineComponent" type="Node" parent="." index="7"]
script = ExtResource("5_wubf3")

[node name="PlayerMovementFiniteStateMachineComponent" type="Node" parent="PlayerConcurrentStateMachineComponent" index="0"]
script = ExtResource("5_57h12")

[node name="Ground" type="Node" parent="PlayerConcurrentStateMachineComponent/PlayerMovementFiniteStateMachineComponent" index="0"]

[node name="PlayerGroundIdleState" type="Node" parent="PlayerConcurrentStateMachineComponent/PlayerMovementFiniteStateMachineComponent/Ground" index="0"]
script = ExtResource("6_lxha7")
is_default_state = true

[node name="PlayerGroundRunState" type="Node" parent="PlayerConcurrentStateMachineComponent/PlayerMovementFiniteStateMachineComponent/Ground" index="1"]
script = ExtResource("7_imrox")

[node name="Air" type="Node" parent="PlayerConcurrentStateMachineComponent/PlayerMovementFiniteStateMachineComponent" index="1"]

[node name="PlayerAirFallState" type="Node" parent="PlayerConcurrentStateMachineComponent/PlayerMovementFiniteStateMachineComponent/Air" index="0"]
script = ExtResource("9_fkquo")

[node name="PlayerAirJumpState" type="Node" parent="PlayerConcurrentStateMachineComponent/PlayerMovementFiniteStateMachineComponent/Air" index="1"]
script = ExtResource("10_2q8pc")

[node name="PlayerAirJumpDownState" type="Node" parent="PlayerConcurrentStateMachineComponent/PlayerMovementFiniteStateMachineComponent/Air" index="2"]
script = ExtResource("12_5y10m")

[node name="PlayerWeaponFiniteStateMachineComponent" type="Node" parent="PlayerConcurrentStateMachineComponent" index="1"]
script = ExtResource("8_bigsv")

[node name="Sword" type="Node" parent="PlayerConcurrentStateMachineComponent/PlayerWeaponFiniteStateMachineComponent" index="0"]

[node name="PlayerSwordIdleState" type="Node" parent="PlayerConcurrentStateMachineComponent/PlayerWeaponFiniteStateMachineComponent/Sword" index="0"]
script = ExtResource("10_5jwnn")
is_default_state = true
